--- a/app/views/kaminari/_next_page.html.erb
+++ b/app/views/kaminari/_next_page.html.erb
@@ -6,6 +6,15 @@
     per_page:      number of items to fetch per page
     remote:        data-remote
 -%>
-<span class="next">
-  <%= link_to_unless current_page.last?, raw(t 'views.pagination.next'), url, :rel => 'next', :remote => remote %>
-</span>
+
+<% if current_page.last? %>
+<li class="disabled">
+  <a><%= raw(t 'views.pagination.next') %></a>
+</li>
+<% else %>
+<li>
+  <%= link_to raw(t 'views.pagination.next'), url, :rel => 'next', :remote => remote %>  
+</li>
+<% end %>
+
+
