--- a/app/views/kaminari/_prev_page.html.erb
+++ b/app/views/kaminari/_prev_page.html.erb
@@ -1,11 +1,19 @@
 <%# Link to the "Previous" page
-  - available local variables
-    url:           url to the previous page
-    current_page:  a page object for the currently displayed page
-    total_pages:   total number of pages
-    per_page:      number of items to fetch per page
-    remote:        data-remote
+- available local variables
+url:           url to the previous page
+current_page:  a page object for the currently displayed page
+total_pages:   total number of pages
+per_page:      number of items to fetch per page
+remote:        data-remote
 -%>
-<span class="prev">
-  <%= link_to_unless current_page.first?, raw(t 'views.pagination.previous'), url, :rel => 'prev', :remote => remote %>
-</span>
+
+<% if current_page.first? %>
+<li class="disabled">
+  <a>&laquo;</a>
+</li>
+<% else %>
+<li>
+  <%= link_to raw(t 'views.pagination.previous'), url, :rel => 'prev', :remote => remote %>
+</li>
+<% end %>
+
