--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -37,9 +37,8 @@
           </div>
           <% end %>
         </div>
-  
-        <%= paginate @posts %>
-  
+
+        <div class="paginate"><%= paginate @posts %></div>
       </div>
     </div>
     <div class="col-md-4 col-sm-4 hidden-xs">
