--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -20,7 +20,7 @@
             </div>
       
             <div class="title">
-              <%= link_to post.title, post_path(post)%>
+              <%= link_to post.title, post_path(post), "data-no-turbolink" => true%>
               <div class="extra_info">
                 <div class="school">
                   <% school = School.find post.school_id %>
